[FIX] sign: Fix layout issue from BS4 migration

--- a/sign/static/src/scss/sign_backend.scss
+++ b/sign/static/src/scss/sign_backend.scss
@@ -40,6 +40,7 @@
     }
     .modal-content {
         .o_field_one2many.o_sign_flat_o2m {
+            padding-right: 45px;
             table {
                 padding: 0 45px 0 0;
             }
